src/runtime/zig/lean_rt.zig

// Copyright (c) 2026 Lean FRO, LLC. All rights reserved.
// Released under Apache 2.0 license as described in the file LICENSE.
/// Auto-generated from the EmitZig preamble.
/// Do not edit by hand; regenerate via tools/gen-lean-rt-zig.py.
pub const std = @import("std");
pub const lean_object = extern struct {
    m_rc: i32,
    m_cs_sz: u16,
    m_other: u8,
    m_tag: u8,
};
pub const lean_once_cell_t = extern struct {
    state: i32,
    lock: i32,
};
pub const LeanObj = ?*align(1) lean_object;
pub const lean_ctor_object = extern struct {
    m_header: lean_object,
    m_objs: [0]usize,
};
pub const lean_array_object = extern struct {
    m_header: lean_object,
    m_size: usize,
    m_capacity: usize,
    m_data: [0]LeanObj,
};
pub const lean_sarray_object = extern struct {
    m_header: lean_object,
    m_size: usize,
    m_capacity: usize,
    m_data: [0]u8,
};
pub const lean_string_object = extern struct {
    m_header: lean_object,
    m_size: usize,
    m_capacity: usize,
    m_length: usize,
    m_data: [0]u8,
};
pub const lean_closure_object = extern struct {
    m_header: lean_object,
    m_fun: ?*anyopaque,
    m_arity: u16,
    m_num_fixed: u16,
    m_objs: [0]LeanObj,
};
pub const MainFn = *const fn (c_int, [*c][*c]u8) callconv(.c) LeanObj;
